modificadas plantillas imagen y footer

--- a/css/hojaDeEstilo1.css
+++ b/css/hojaDeEstilo1.css
@@ -19,9 +19,8 @@
 .header {
   background-color: rgba(114, 183, 161, 255);
   color: #ffffff;
-  padding: 15px;
+  padding: 10px;
   display: flex;
-  width: 100%;
 }
 
 .menu ul {
@@ -34,7 +33,6 @@
   padding: 8px;
   margin-bottom: 7px;
   background-color: rgb(250, 213, 133);
-  color: #ffffff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -50,6 +48,10 @@
   padding: 15px;
 }
 
+.footer img {
+  width: 10%;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
@@ -57,7 +59,8 @@
 
 a {
   text-decoration: none;
-  color: #ffffff;
+  color: black;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 600px) {
@@ -142,15 +145,18 @@ a {
 .logo {
   float: left;
   width: 60%;
+  padding: 0;
+  margin: 0;
 }
 .logo img {
-  width: 200px;
+  width: 50%;
+  padding: 0;
 }
 
 .field {
   display: flex;
   float: right;
-  width: 40%;
+  width: 35%;
   flex-direction: row;
   box-shadow: 1px 1px 0 rgb(22, 160, 133), 2px 2px 0 rgb(22, 160, 133),
     3px 3px 0 rgb(22, 160, 133), 4px 4px 0 rgb(22, 160, 133),
