--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -13,4 +13,30 @@
 }
 #title {
   text-align: center;
+  padding-bottom: 15px;
+}
+
+/* pantallas de máximo 490 px de ancho */
+@media screen and (max-width: 490px) {
+  #espacio {
+    position: relative;
+  }
+  .info {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100%;
+    top: 40px;
+    width: 90%;
+  }
+  .map {
+    position: absolute;
+    margin-top: 50%;
+    height: 30%;
+    width: 90%;
+  }
+  .footer {
+    position: absolute;
+    margin-top: 170%;
+  }
 }
