--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -4,8 +4,36 @@ body{
 
 @media screen and (max-width: 600px) {
    
+    .todo{
+        margin:2em;
+        
+        
+    }
     .informacion{
-        background-color: red;
+        background-color: rgba(248, 194, 75, 255);;
+        width: 80%;
+        border-radius: 1em;
+        padding-top: 2em;
+        padding-bottom: 2em;
+        margin-left: auto;
+        margin-right: auto;
+        
+        
+    }
+    .mapa{
+        width:80%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 3em;
+        
+    }
+    iframe {
+
+        width:100%;
+        height: 100%;
+        border-radius: 1em;
+        
+
     }
 
   }
@@ -14,19 +42,34 @@ body{
  
     .todo{
         display: flex;
+        padding:2em;
+        
+        
     }
     .informacion{
-        background-color: red;
+        background-color: rgba(248, 194, 75, 255);;
         width: 50%;
-
+        border-radius: 1em;
+        padding-top: 5em;
+        padding-bottom: 5em;        
     }
+
+
     .mapa{
         width:50%;
+        
     }
     iframe {
-        width:90%;
+        width:80%;
+        height: 100%;
         border-radius: 1em;
 
     }
-  }
+
+    .footer{
+    position: absolute;
 }
+
+}
+
+
