--- a/css/hojaDeEstilos.css
+++ b/css/hojaDeEstilos.css
@@ -6,6 +6,12 @@
   margin: 0;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: rgba(123, 206, 209, 255);
@@ -78,7 +84,6 @@
 }
 /*style footer*/
 .footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -103,25 +108,10 @@
   }
 }
 
-#floatLeft div {
-  padding: 2%;
-  float: left;
-}
-
-/* Container holding the image and the text */
-.aside {
-  top: 20px;
-  width: 40%;
-}
-.aside img {
-  width: 100%;
-  height: 100%;
-  padding-left: 3%;
-}
-
 h1 {
   padding-top: 2%;
   text-align: center;
+  padding-bottom: 2%;
 }
 
 .contenido {
