--- a/css/hojaDeEstilos.css
+++ b/css/hojaDeEstilos.css
@@ -78,7 +78,6 @@
 }
 /*style footer*/
 .footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -109,15 +108,7 @@
 }
 
 /* Container holding the image and the text */
-.aside {
-  top: 20px;
-  width: 40%;
-}
-.aside img {
-  width: 100%;
-  height: 100%;
-  padding-left: 3%;
-}
+
 
 h1 {
   padding-top: 2%;
@@ -125,5 +116,7 @@ h1 {
 }
 
 .contenido {
-  width: 60%;
+  width: 100%;
+  margin: auto;
+  padding: auto;
 }
