--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -3,24 +3,33 @@ body{
 }
 
 @media screen and (max-width: 480px) {
+
+  
+
   .fotoPortada{
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 1em;
   }
   
+  .coleccionVideos{
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
 .videoPortada {
     width: 60%;
     border-radius: 3em;
-    margin-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 1em;
   }
 
-  .separacion {
-    margin-top: 2em;
-    
+  footer{
+    position: absolute;
   }
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px)  {
@@ -52,14 +61,14 @@ body{
   }
   
 .videoPortada {
-    width: 30%;
+    width: 60%;
     padding:1em;
     padding-top: 2em;
-    padding-bottom: 2em;
     border-radius: 3em;
     
 
   }
+
 }
 
 @media screen and (min-width: 1280px) {
@@ -75,8 +84,6 @@ body{
     padding-top: 2em;
     padding-bottom: 2em;
     border-radius: 3em;
-    
-
   }
 }
 
