--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,4 +1,4 @@
-* {
+[13:10, 5/11/2021] Estefania (Daw): * {
   box-sizing: border-box;
 }
 
@@ -59,4 +59,8 @@ img {
 
 img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+.imagenes{
+  
+  height: 250px;
 }
