--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -1,3 +1,10 @@
+@import url("hojaDeEstilos.css");
+.contenido {
+    width: 100%;
+    margin: auto;
+    padding: auto;
+}
+
 @media screen and (max-width: 1440px){
     .enlaces p{
         color: #F3797A;
